welcome.lessons.welcome.bat.bool2.NearTen.scala.error
nearTen:3: error: type mismatch;
 found   : Int
 required: Boolean
  return num%5 //<= 1
            ^